@@ -230,12 +230,12 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
         return Mono.just(
                 ContextAuthentication.CLIENT_TYPE_SYSTEM.equals(
-                        userNClient.getT1().getTypeCode())
-                        || clientCode.equals(userNClient.getT1().getCode())
-                        || userNClient
-                        .getT1()
-                        .getId()
-                        .equals(userNClient.getT2().getId())
+                                        userNClient.getT1().getTypeCode())
+                                || clientCode.equals(userNClient.getT1().getCode())
+                                || userNClient
+                                        .getT1()
+                                        .getId()
+                                        .equals(userNClient.getT2().getId())
                         ? Boolean.TRUE
                         : Boolean.FALSE);
     }
@@ -272,11 +272,11 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     }
 
     public SecurityUserStatusCode[] getNonDeletedUserStatusCodes() {
-        return new SecurityUserStatusCode[]{
-                SecurityUserStatusCode.ACTIVE,
-                SecurityUserStatusCode.INACTIVE,
-                SecurityUserStatusCode.LOCKED,
-                SecurityUserStatusCode.PASSWORD_EXPIRED
+        return new SecurityUserStatusCode[] {
+            SecurityUserStatusCode.ACTIVE,
+            SecurityUserStatusCode.INACTIVE,
+            SecurityUserStatusCode.LOCKED,
+            SecurityUserStatusCode.PASSWORD_EXPIRED
         };
     }
 
@@ -343,8 +343,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                     createdUser.getId(), CREATE, getSoxObjectName(), "User created");
                             return this.setPasswordEntities(createdUser, pass);
                         },
-                        (ca, user, isValid, pass, passValid, isAvailable, createdUser, passSet) ->
-                                this.evictOwnerCache(passSet.getClientId(), passSet.getId()).map(evicted -> passSet))
+                        (ca, user, isValid, pass, passValid, isAvailable, createdUser, passSet) -> this.evictOwnerCache(
+                                        passSet.getClientId(), passSet.getId())
+                                .map(evicted -> passSet))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.create"))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.FORBIDDEN_CREATE, "User"));
     }
@@ -396,11 +397,7 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     }
 
     private Mono<Boolean> passwordPolicyCheck(
-            ULong urlClientId,
-            String appCode,
-            ULong userId,
-            AuthenticationPasswordType passwordType,
-            String password) {
+            ULong urlClientId, String appCode, ULong userId, AuthenticationPasswordType passwordType, String password) {
 
         return this.clientService.validatePasswordPolicy(urlClientId, appCode, userId, passwordType, password);
     }
@@ -444,13 +441,11 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     }
 
     public Mono<UserResponse> readById(ULong userId) {
-        return this.readByIdWithCache(userId)
-                .flatMap(this::toUserResponse);
+        return this.readByIdWithCache(userId).flatMap(this::toUserResponse);
     }
 
     public Mono<User> readByIdWithCache(ULong userId) {
-        return this.cacheService
-                .cacheValueOrGet(CACHE_NAME_USER, () -> this.dao.readInternal(userId), userId);
+        return this.cacheService.cacheValueOrGet(CACHE_NAME_USER, () -> this.dao.readInternal(userId), userId);
     }
 
     public Mono<List<UserResponse>> readByIds(List<ULong> userIds) {
@@ -494,19 +489,21 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
         return FlatMapUtil.flatMapMono(
                         () -> this.dao.getUserClientId(key),
-                        clientId ->
-                                this.clientService.getClientTypeNCodeNClientLevel(clientId).map(Tuple2::getT1),
+                        clientId -> this.clientService
+                                .getClientTypeNCodeNClientLevel(clientId)
+                                .map(Tuple2::getT1),
                         (clientId, clientType) -> switch (clientType) {
-                            case "INDV" -> this.clientHierarchyService
-                                    .getManagingClient(clientId, ClientHierarchy.Level.ZERO)
-                                    .flatMap(managingClientId -> this.dao.checkUserExistsExclude(
-                                            managingClientId, userName, emailId, phoneNumber, "INDV", key));
+                            case "INDV" ->
+                                this.clientHierarchyService
+                                        .getManagingClient(clientId, ClientHierarchy.Level.ZERO)
+                                        .flatMap(managingClientId -> this.dao.checkUserExistsExclude(
+                                                managingClientId, userName, emailId, phoneNumber, "INDV", key));
                             case "BUS" -> this.dao.checkUserExists(clientId, userName, emailId, phoneNumber, null);
                             default -> Mono.empty();
                         },
                         (clientId, clientType, userExists) ->
                                 Boolean.TRUE.equals(userExists) ? Mono.empty() : super.update(key, fields),
-                        (clientId, clientType, userExists, updated) -> this.evictTokensAndOwnerCache(
+                        (clientId, clientType, userExists, updated) -> this.evictCache(
                                         updated.getId(), updated.getClientId())
                                 .<User>map(evicted -> updated))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.FORBIDDEN_UPDATE, "user"));
@@ -520,44 +517,49 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                 .getClientTypeNCodeNClientLevel(entity.getClientId())
                                 .map(Tuple2::getT1),
                         clientType -> switch (clientType) {
-                            case "INDV" -> this.clientHierarchyService
-                                    .getManagingClient(entity.getClientId(), ClientHierarchy.Level.ZERO)
-                                    .flatMap(managingClientId -> this.dao.checkUserExistsExclude(
-                                            managingClientId,
-                                            entity.getUserName(),
-                                            entity.getEmailId(),
-                                            entity.getPhoneNumber(),
-                                            "INDV",
-                                            entity.getId()));
-                            case "BUS" -> this.dao.checkUserExists(
-                                    entity.getClientId(),
-                                    entity.getUserName(),
-                                    entity.getEmailId(),
-                                    entity.getPhoneNumber(),
-                                    null);
+                            case "INDV" ->
+                                this.clientHierarchyService
+                                        .getManagingClient(entity.getClientId(), ClientHierarchy.Level.ZERO)
+                                        .flatMap(managingClientId -> this.dao.checkUserExistsExclude(
+                                                managingClientId,
+                                                entity.getUserName(),
+                                                entity.getEmailId(),
+                                                entity.getPhoneNumber(),
+                                                "INDV",
+                                                entity.getId()));
+                            case "BUS" ->
+                                this.dao.checkUserExists(
+                                        entity.getClientId(),
+                                        entity.getUserName(),
+                                        entity.getEmailId(),
+                                        entity.getPhoneNumber(),
+                                        null);
                             default -> Mono.empty();
                         },
                         (clientType, userExists) ->
                                 Boolean.TRUE.equals(userExists) ? Mono.empty() : super.update(entity),
-                        (clientType, userExists, updated) -> this.evictTokensAndOwnerCache(
-                                        updated.getId(), updated.getClientId())
+                        (clientType, userExists, updated) -> this.evictCache(updated.getId(), updated.getClientId())
                                 .map(evicted -> updated))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.FORBIDDEN_UPDATE, "user"));
     }
 
-    private Mono<Integer> evictTokensAndOwnerCache(ULong userId, ULong clientId) {
-        return Mono.zip(
-                this.evictTokens(userId),
-                this.evictOwnerCache(clientId, userId),
-                (tEvicted, oEvicted) -> tEvicted == 1 && oEvicted == 1 ? 1 : 0);
+    private Mono<Integer> evictCache(ULong userId, ULong clientId) {
+        return Mono.zip(this.evictTokens(userId), this.evictOwnerCache(clientId, userId), this.evictUserCache(userId))
+                .map(evicted -> evicted.getT1() == 1 && evicted.getT2() == 1 && evicted.getT3() == 1 ? 1 : 0);
     }
 
-    private Mono<Integer> evictTokens(ULong id) {
-        return this.tokenService.evictTokensOfUser(id);
+    private Mono<Integer> evictTokens(ULong userId) {
+        return this.tokenService.evictTokensOfUser(userId);
+    }
+
+    private Mono<Integer> evictUserCache(ULong userId) {
+        return this.cacheService.evict(CACHE_NAME_USER, userId).map(evicted -> Boolean.TRUE.equals(evicted) ? 1 : 0);
     }
 
     private Mono<Integer> evictOwnerCache(ULong clientId, ULong userId) {
-        return this.userSubOrgService.evictOwnerCache(clientId, userId).map(evicted -> Boolean.TRUE.equals(evicted) ? 1 : 0);
+        return this.userSubOrgService
+                .evictOwnerCache(clientId, userId)
+                .map(evicted -> Boolean.TRUE.equals(evicted) ? 1 : 0);
     }
 
     @Override
@@ -586,8 +588,7 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                     return e;
                 })
                 .flatMap(this::update)
-                .flatMap(e -> this.evictTokensAndOwnerCache(e.getId(), e.getClientId())
-                        .map(x -> 1));
+                .flatMap(e -> this.evictCache(e.getId(), e.getClientId()).map(x -> 1));
     }
 
     public Mono<User> readInternal(ULong id) {
@@ -602,9 +603,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (ca, user) -> ca.isSystemClient()
                                 ? Mono.just(true)
                                 : clientService
-                                .isBeingManagedBy(
-                                        ULong.valueOf(ca.getUser().getClientId()), user.getClientId())
-                                .flatMap(BooleanUtil::safeValueOfWithEmpty),
+                                        .isBeingManagedBy(
+                                                ULong.valueOf(ca.getUser().getClientId()), user.getClientId())
+                                        .flatMap(BooleanUtil::safeValueOfWithEmpty),
                         (ca, user, isManaged) -> this.dao
                                 .removeRoleForUser(userId, roleId)
                                 .map(val -> {
@@ -613,8 +614,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
                                     return removed;
                                 }),
-                        (ca, user, isManaged, removed) -> this.evictTokensAndOwnerCache(userId, user.getClientId())
-                                .map(evicted -> removed))
+                        (ca, user, isManaged, removed) ->
+                                this.evictCache(userId, user.getClientId()).map(evicted -> removed))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.removeRoleFromUser"))
                 .flatMap(this.cacheService.evictFunction(CACHE_NAME_USER_ROLE, userId))
                 .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.ROLE_REMOVE_ERROR, roleId, userId));
@@ -632,11 +633,11 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                             (ca, user) -> ca.isSystemClient()
                                     ? Mono.just(true)
                                     : clientService
-                                    .isBeingManagedBy(
-                                            ULongUtil.valueOf(
-                                                    ca.getUser().getClientId()),
-                                            user.getClientId())
-                                    .flatMap(BooleanUtil::safeValueOfWithEmpty),
+                                            .isBeingManagedBy(
+                                                    ULongUtil.valueOf(
+                                                            ca.getUser().getClientId()),
+                                                    user.getClientId())
+                                            .flatMap(BooleanUtil::safeValueOfWithEmpty),
                             (ca, user, sysOrManaged) -> this.profileService
                                     .hasAccessToRoles(user.getClientId(), Set.of(roleId))
                                     .flatMap(BooleanUtil::safeValueOfWithEmpty),
@@ -647,9 +648,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
                                         return e;
                                     }),
-                            (ca, user, sysOrManaged, roleApplicable, roleAssigned) -> this.evictTokensAndOwnerCache(
-                                            userId, user.getClientId())
-                                    .map(evicted -> roleAssigned))
+                            (ca, user, sysOrManaged, roleApplicable, roleAssigned) ->
+                                    this.evictCache(userId, user.getClientId()).map(evicted -> roleAssigned))
                     .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.assignRoleToUser"))
                     .flatMap(this.cacheService.evictFunction(CACHE_NAME_USER_ROLE, userId))
                     .switchIfEmpty(this.forbiddenError(SecurityMessageResourceService.ROLE_FORBIDDEN, roleId, userId));
@@ -670,9 +670,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                 .filter(BooleanUtil::safeValueOf),
                         (ca, user, sysManaged, profileAccess) ->
                                 this.dao.addProfileToUser(userId, profileId).map(e -> e != 0),
-                        (ca, user, sysManaged, profileAccess, profileAssigned) -> this.evictTokensAndOwnerCache(
-                                        userId, user.getClientId())
-                                .map(evicted -> profileAssigned))
+                        (ca, user, sysManaged, profileAccess, profileAssigned) ->
+                                this.evictCache(userId, user.getClientId()).map(evicted -> profileAssigned))
                 .contextWrite(Context.of(
                         LogUtil.METHOD_NAME, "UserService.assignProfileToUser : [ " + userId + ", " + profileId + "]"))
                 .switchIfEmpty(
@@ -690,9 +689,8 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                 .filter(BooleanUtil::safeValueOf),
                         (ca, user, sysManaged) ->
                                 this.dao.removeProfileForUser(userId, profileId).map(e -> e != 0),
-                        (ca, user, sysManaged, profileRemoved) -> this.evictTokensAndOwnerCache(
-                                        userId, user.getClientId())
-                                .map(evicted -> profileRemoved))
+                        (ca, user, sysManaged, profileRemoved) ->
+                                this.evictCache(userId, user.getClientId()).map(evicted -> profileRemoved))
                 .contextWrite(Context.of(
                         LogUtil.METHOD_NAME, "UserService.assignProfileToUser : [ " + userId + ", " + profileId + "]"))
                 .switchIfEmpty(
@@ -931,12 +929,14 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
         boolean matches =
                 switch (passType) {
-                    case PASSWORD -> user.isPasswordHashed()
-                            ? passwordEncoder.matches(user.getId() + password, user.getPassword())
-                            : StringUtil.safeEquals(password, user.getPassword());
-                    case PIN -> user.isPinHashed()
-                            ? passwordEncoder.matches(user.getId() + password, user.getPin())
-                            : StringUtil.safeEquals(password, user.getPin());
+                    case PASSWORD ->
+                        user.isPasswordHashed()
+                                ? passwordEncoder.matches(user.getId() + password, user.getPassword())
+                                : StringUtil.safeEquals(password, user.getPassword());
+                    case PIN ->
+                        user.isPinHashed()
+                                ? passwordEncoder.matches(user.getId() + password, user.getPin())
+                                : StringUtil.safeEquals(password, user.getPin());
                     default -> false;
                 };
 
@@ -965,9 +965,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                                     .setEventName(
                                             isReset
                                                     ? EventNames.getEventName(
-                                                    EventNames.USER_PASSWORD_RESET_DONE, passType)
+                                                            EventNames.USER_PASSWORD_RESET_DONE, passType)
                                                     : EventNames.getEventName(
-                                                    EventNames.USER_PASSWORD_CHANGED, passType))
+                                                            EventNames.USER_PASSWORD_CHANGED, passType))
                                     .setData(Map.of("user", user)));
                         })
                 .flatMap(e -> this.evictTokens(user.getId()).map(x -> e))
@@ -1105,7 +1105,7 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (levelType, departments, departmentIndex, designations, designationIndex, userDesignations) -> {
                             if (userDesignations.isEmpty()
                                     || !designationIndex.containsKey(
-                                    userDesignations.getFirst().getDesignationId())) return Mono.just(true);
+                                            userDesignations.getFirst().getDesignationId())) return Mono.just(true);
 
                             return this.dao.addDesignation(
                                     userId,
@@ -1165,9 +1165,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (ca, id) -> ca.isSystemClient()
                                 ? Mono.just(Boolean.TRUE)
                                 : this.dao
-                                .readById(id)
-                                .flatMap(e -> this.clientService.isBeingManagedBy(
-                                        ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
+                                        .readById(id)
+                                        .flatMap(e -> this.clientService.isBeingManagedBy(
+                                                ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
                         (ca, id, sysOrManaged) -> Boolean.FALSE.equals(sysOrManaged)
                                 ? Mono.empty()
                                 : this.dao.makeUserActiveIfInActive(id))
@@ -1185,9 +1185,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (ca, id) -> ca.isSystemClient()
                                 ? Mono.just(Boolean.TRUE)
                                 : this.dao
-                                .readById(id)
-                                .flatMap(e -> this.clientService.isBeingManagedBy(
-                                        ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
+                                        .readById(id)
+                                        .flatMap(e -> this.clientService.isBeingManagedBy(
+                                                ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
                         (ca, id, sysOrManaged) ->
                                 Boolean.FALSE.equals(sysOrManaged) ? Mono.empty() : this.dao.makeUserInActive(id))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.makeUserInActive"))
@@ -1204,9 +1204,9 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (ca, id) -> ca.isSystemClient()
                                 ? Mono.just(Boolean.TRUE)
                                 : this.dao
-                                .readById(id)
-                                .flatMap(e -> this.clientService.isBeingManagedBy(
-                                        ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
+                                        .readById(id)
+                                        .flatMap(e -> this.clientService.isBeingManagedBy(
+                                                ULong.valueOf(ca.getLoggedInFromClientId()), e.getClientId())),
                         (ca, id, sysOrManaged) ->
                                 Boolean.FALSE.equals(sysOrManaged) ? Mono.empty() : this.unlockUserInternal(id))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.unblockUser"))
@@ -1298,18 +1298,18 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
                         (ca, user) -> ca.isSystemClient()
                                 ? Mono.just(Boolean.TRUE)
                                 : clientService
-                                .isBeingManagedBy(
-                                        ULongUtil.valueOf(ca.getUser().getClientId()), user.getClientId())
-                                .flatMap(BooleanUtil::safeValueOfWithEmpty),
+                                        .isBeingManagedBy(
+                                                ULongUtil.valueOf(ca.getUser().getClientId()), user.getClientId())
+                                        .flatMap(BooleanUtil::safeValueOfWithEmpty),
                         (ca, user, sysOrManaged) -> this.designationService
                                 .canAssignDesignation(user.getClientId(), designationId)
                                 .flatMap(canAssign -> !BooleanUtil.safeValueOf(canAssign)
                                         ? this.securityMessageResourceService.throwMessage(
-                                        msg -> new GenericException(HttpStatus.BAD_REQUEST, msg),
-                                        SecurityMessageResourceService.USER_DESIGNATION_MISMATCH)
+                                                msg -> new GenericException(HttpStatus.BAD_REQUEST, msg),
+                                                SecurityMessageResourceService.USER_DESIGNATION_MISMATCH)
                                         : Mono.just(user)),
                         (ca, user, sysOrManaged, validUser) -> super.update(user.setDesignationId(designationId)),
-                        (ca, user, sysOrManaged, validUser, updated) -> this.evictTokensAndOwnerCache(
+                        (ca, user, sysOrManaged, validUser, updated) -> this.evictCache(
                                         updated.getId(), updated.getClientId())
                                 .map(evicted -> updated))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.updateDesignation"))
@@ -1318,7 +1318,6 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
     }
 
     public Mono<Boolean> checkIfUserIsOwner(ULong userId) {
-
 
         if (userId == null) return Mono.empty();
 
@@ -1334,33 +1333,30 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
         List<String> authorities = List.of("Authorities.User_CREATE", "Authorities.ROLE_Owner");
 
         return FlatMapUtil.flatMapMono(
-
                         () -> this.appService.getAppByCode(appCode),
-
                         app -> this.clientService.getClientBy(clientCode),
-
                         (app, client) -> this.profileService.getAppProfilesHavingAuthorities(
                                 app.getId(), client.getId(), authorities),
-
                         (app, client, appAdminProfiles) -> this.dao
                                 .getUsersForProfiles(appAdminProfiles, client.getId())
                                 .flatMap(users -> {
                                     if (users.isEmpty()) {
-                                        return Mono.empty(); // Convert the empty list to empty Mono to trigger switchIfEmpty
+                                        return Mono.empty(); // Convert the empty list to empty Mono to trigger
+                                        // switchIfEmpty
                                     }
                                     return Mono.just(users);
                                 })
                                 .map(users -> users.stream()
                                         .map(User::getEmailId)
                                         .filter(Objects::nonNull)
-                                        .collect(Collectors.toList()))
+                                        .toList())
                                 .map(emails -> Map.of("emails", emails, "addApp", Boolean.FALSE))
                                 .switchIfEmpty(this.dao
                                         .getOwners(client.getId())
                                         .map(users -> users.stream()
                                                 .map(User::getEmailId)
                                                 .filter(Objects::nonNull)
-                                                .collect(Collectors.toList()))
+                                                .toList())
                                         .map(emails -> Map.of("emails", emails, "addApp", Boolean.TRUE))))
                 .contextWrite(Context.of(LogUtil.METHOD_NAME, "UserService.getAppUserAdminEmails"))
                 .defaultIfEmpty(Map.of("emails", List.of(), "addApp", Boolean.FALSE));
@@ -1373,22 +1369,28 @@ public class UserService extends AbstractSecurityUpdatableDataService<SecurityUs
 
         boolean fetchProfiles = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_PROFILES));
         boolean fetchClient = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_CLIENT));
-        boolean fetchManagingClient = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_MANAGING_CLIENT));
-        boolean fetchCreatedBy = BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_CREATED_BY));
+        boolean fetchManagingClient =
+                BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_MANAGING_CLIENT));
+        boolean fetchCreatedBy =
+                BooleanUtil.safeValueOf(request.getQueryParams().getFirst(FETCH_CREATED_BY));
 
         Flux<User> userFlux = Flux.fromIterable(users);
 
-        if (fetchProfiles)
-            userFlux = userFlux.flatMap(user -> this.profileService.fillUser(appCode, appId, user));
+        if (fetchProfiles) userFlux = userFlux.flatMap(user -> this.profileService.fillUser(appCode, appId, user));
 
         if (fetchClient)
-            userFlux = userFlux.flatMap(user -> this.clientService.getClientInfoById(user.getClientId()).map(user::setClient));
+            userFlux = userFlux.flatMap(user ->
+                    this.clientService.getClientInfoById(user.getClientId()).map(user::setClient));
 
         if (fetchManagingClient)
-            userFlux = userFlux.flatMap(user -> this.clientService.getManagedClientOfClientById(user.getClientId()).map(user::setManagingClient));
+            userFlux = userFlux.flatMap(user -> this.clientService
+                    .getManagedClientOfClientById(user.getClientId())
+                    .map(user::setManagingClient));
 
         if (fetchCreatedBy)
-            userFlux = userFlux.filter(user -> user.getCreatedBy() != null && user.getCreatedBy().intValue() != 0).flatMap(user -> this.dao.readInternal(user.getCreatedBy()).map(user::setCreatedByUser));
+            userFlux = userFlux.filter(user ->
+                            user.getCreatedBy() != null && user.getCreatedBy().intValue() != 0)
+                    .flatMap(user -> this.dao.readInternal(user.getCreatedBy()).map(user::setCreatedByUser));
 
         return userFlux.collectList();
     }
